--- a/.github/workflows/go-windows.yml
+++ b/.github/workflows/go-windows.yml
@@ -24,8 +24,12 @@ jobs:
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
+    - name: Checkout submodules
+      uses: textbook/git-checkout-submodule-action@master
+      with:
+        remote: true
     - name: Build
-      run: go build -v -o ecust-library.exe
+      run: chmod +x build_proto.sh && ./build_proto.sh && go build -v -o ecust-library.exe
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
