--- a/.github/workflows/go-macos.yml
+++ b/.github/workflows/go-macos.yml
@@ -20,6 +20,8 @@ jobs:
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
+      with:
+        submodules: true
 
     - name: Get dependencies
       run: |
@@ -28,10 +30,6 @@ jobs:
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
-    - name: Checkout submodules
-      uses: textbook/git-checkout-submodule-action@master
-      with:
-        remote: true
     - name: Build
       run: chmod +x build_proto.sh && ./build_proto.sh && go build -v -o ecust-library
     - name: Upload Artifact
